# djangohillelcource

./: Dockerfile  Makefile  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
api/: urls.py  views.py
middleware/: sql_middleware.py
nginx/: nginx.conf
retail/: admin.py  models.py  serializers.py  urls.py  views.py
retail/migrations/: 0001_initial.py  0002_cart_cartitem.py  0003_alter_product_title.py  0004_alter_product_title.py
shop/: settings.py  urls.py
templates/: base.html  cart_detail.html  failed_payment.html  index.html  success_payment.html
