[tool.poetry]
name = "temp-django"
version = "0.1.0"
description = ""
authors = ["vasylkartychak <w.i.k.mailua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
gunicorn = "^23.0.0"
stripe = "^10.8.0"
django-environ = "^0.11.2"
sentry-sdk = "^2.13.0"
django-debug-toolbar = "^4.4.6"
django-silk = "^5.2.0"
psycopg = "^3.2.1"
django-redis = "^5.4.0"
django-cacheops = "^7.0.2"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
